# structural-observability

./: .gitignore  MIGRATION.md  Makefile  README.md  pyproject.toml
cases/: urs_milp_global.yaml  urs_milp_repair.yaml  urs_milp_verify_ideal.yaml  urs_milp_verify_real.yaml  urs_min_placement_real.yaml  urs_min_placement_repair.yaml  urs_min_placement_zero.yaml  urs_pdf_ideal.yaml  urs_pdf_real.yaml  urs_pdf_repair.yaml
src/structural_obs/: __init__.py
src/structural_obs/app/: __init__.py  bundle.py  display.py  presenters.py  streamlit_app.py  ui_labels.py
src/structural_obs/tearing/: __init__.py  core.py  registry.py
src/structural_obs/tearing/cases/: __init__.py  narasimhan.py  olefins.py  urs_document_bank.py  urs_document_stage.py
src/structural_obs/tearing/cli/: run_cases.py  run_matching_ablation.py  run_time_benchmark.py
src/structural_obs/toolkit/: __init__.py  premises.py
src/structural_obs/toolkit/cli/: __init__.py  min_instrumentation.py  run_case.py
src/structural_obs/toolkit/milp/: __init__.py  documento_ilp.py  sensor_groups.py
src/structural_obs/toolkit/schemas/: __init__.py  case_schema.py  loaders.py
src/structural_obs/toolkit/services/: __init__.py  audit_export.py  classify_service.py  milp_service.py  min_repair.py
tests/: test_case_yaml.py  test_milp_urs.py  test_min_placement.py  test_tearing_semantics.py  test_ui_presenters.py  test_urs_pdf_regression.py
