[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "structural-observability"
version = "0.3.0"
description = "CP-SAT structural classification and PDF-style minimum instrumentation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Romulo Brito" }]
dependencies = [
  "ortools",
  "pandas",
  "pyyaml",
]

[project.optional-dependencies]
app = ["streamlit>=1.28"]
dev = ["pytest>=7.0"]

[project.scripts]
structural-obs-run = "structural_obs.toolkit.cli.run_case:main"
structural-obs-app = "structural_obs.app.streamlit_app:main"
structural-obs-run-cases = "structural_obs.tearing.cli.run_cases:main"
structural-obs-min-inst = "structural_obs.toolkit.cli.min_instrumentation:main"
structural-obs-ablation = "structural_obs.tearing.cli.run_matching_ablation:main"
structural-obs-benchmark = "structural_obs.tearing.cli.run_time_benchmark:main"

[tool.hatch.build.targets.wheel]
packages = ["src/structural_obs"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/cases",
  "/tests",
  "/docs",
  "/README.md",
]
